Textures and player animation

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -6,7 +6,7 @@
 	<style>
 			html { display: table; width: 100%; height: 100%; color: #fff; background: #000; }
 			body { display: table-cell; vertical-align:middle; margin: 0; }
-			canvas { display: block; margin: 0 auto; background: #333; }
+			canvas { display: block; margin: 0 auto; background: #54545a url(/ground.png) repeat; }
 	</style>
 </head>
 <body>
@@ -19,6 +19,8 @@
 	<script src="/math2.js"></script>
 	<script src="/loop.js"></script>
 	<script src="/keyboard.js"></script>
+	<script src="/PxLoader.js"></script>
+	<script src="/PxLoaderImage.js"></script>
 	<script src="/index.js"></script>
 </body>
 </html>
