Env-defined domain

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -13,6 +13,7 @@
 	<canvas></canvas>
 	<script>
 		this.sessionID = "<%= sessionID %>";
+		this.domain = "<%= domain %>";
 	</script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/raf.js"></script>
