Chat system (use "S")

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -8,6 +8,7 @@
 			body { display: table-cell; vertical-align:middle; margin: 0; }
 			canvas { display: block; margin: 0 auto; background: #54545a url(/ground.png) repeat; }
 			canvas.start { background: #000 url(/splash.png); background-size: 100%; }
+			p.bubble { overflow: hidden; position: absolute; width: 150px; margin: 0; padding: 5px; font: 14px/normal sans-serif; color: #000; background: rgba(255,255,255,0.6); border: 1px solid rgba(0,0,0,0.6); border-radius: 3px; }
 	</style>
 </head>
 <body>
