--- a/tpl/index.html
+++ b/tpl/index.html
@@ -4,26 +4,36 @@
 	<meta charset="utf-8" />
 	<title>Julian Assange and the clones</title>
 	<style>
-			html { display: table; width: 100%; height: 100%; color: #fff; background: #000; }
-			body { display: table-cell; vertical-align:middle; margin: 0; }
-			canvas { display: block; margin: 0 auto; background: #54545a url(/img/ground.png) repeat; }
-			canvas.start { background: #000 url(/img/splash.png); background-size: 100%; }
-			p.bubble { overflow: hidden; position: absolute; max-width: 150px; margin: 0; font: 14px/20px sans-serif; color: #000; }
+		html { display: table; width: 100%; height: 100%; color: #fff; background: #000; }
+		body { display: table-cell; vertical-align:middle; margin: 0; }
+		canvas { display: block; margin: 0 auto; background: #54545a url(/img/ground.png) repeat; }
+		canvas.start { background: #000 url(/img/splash.png); background-size: 100%; }
+		p.bubble { overflow: hidden; position: absolute; max-width: 150px; margin: 0; font: 14px/20px sans-serif; color: #000; }
 	</style>
+	<script>
+		var require = {
+			baseUrl: '/',
+			waitSeconds: 10,
+			shim: {
+				'vendor/PxLoader': { exports: 'PxLoader' },
+				'vendor/PxLoaderImage': ['vendor/PxLoader'],
+				'vendor/keyboard': { exports: 'KeyboardJS' },
+				'vendor/raf': []
+			}
+		};
+	</script>
+	<script src="/require.js"></script>
+	<script>
+		require(['index'], function(game){
+			game({
+				canvas: document.querySelector('canvas'),
+				sessionID: '<%= sessionID %>',
+				domain: '<%= domain %>'
+			});
+		});
+	</script>
 </head>
 <body>
 	<canvas class="start" width="800" height="480"></canvas>
-	<script>
-		this.sessionID = "<%= sessionID %>";
-		this.domain = "<%= domain %>";
-	</script>
-	<script src="/socket.io/socket.io.js"></script><%
-	for (var i in scripts) {
-		if (debugmode) for (var j = 0; j < scripts[i].length; j++) { %>
-	<script src="/<%= scripts[i][j] %>"></script><%
-		} else { %>
-	<script src="/<%= i %>"></script><%
-		}
-	} %>
 </body>
 </html>
