--- a/tpl/index.html
+++ b/tpl/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Julian Assange and the clones</title>
 	<style>
+		.no-cursor { cursor:none }
 		html { display: table; width: 100%; height: 100%; color: #fff; background: #000; }
 		body { display: table-cell; vertical-align:middle; margin: 0; }
 		canvas { display: block; margin: 0 auto; background: #54545a url(/img/ground.png) repeat; }
